[package]
name = "compiler"
version = "0.1.0"
edition = "2024"

[features]
default = []
llvm-backend = ["dep:inkwell", "dep:llvm-sys"]

[dependencies]
anyhow = "1.0"
ahash = "0.8"
hashbrown = "0.15"
inkwell = { version = "0.9.0", default-features = false, features = ["llvm22-1-no-llvm-linking"], optional = true }
llvm-sys = { version = "221.0.1", optional = true, features = ["no-llvm-linking", "disable-alltargets-init"] }

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
